syntax = "proto3";

package protocols.common;

enum Packet {
    UNKNOW = 0;
    SSL_LOCALSPEED = 1;
    SSL_POSITION = 2;
    SSL_TELEMETRY = 3;
    SSL_ODOMETRY = 4;
    SSL_MOTORS = 5;
}